# Mirage

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/benchmarks/: live-catch-rate.md
docs/superpowers/plans/: 2026-07-13-mirage-sp1-proxy-core.md  2026-07-13-mirage-sp2-deception-sandbox.md  2026-07-13-mirage-sp3-adversarial-harness.md  2026-07-13-mirage-sp4-attribution-dashboard.md
docs/superpowers/specs/: 2026-07-13-mirage-sp1-proxy-core-design.md  2026-07-13-mirage-sp2-deception-sandbox-design.md  2026-07-13-mirage-sp3-adversarial-harness-design.md  2026-07-13-mirage-sp4-attribution-dashboard-design.md
mirage/: app.py  backends.py  dashboard.py  handlers.py  harness.py  honeytokens.py  insights.py  ledger.py  main.py  orchestrator.py  phases.py  policy.py  provenance.py  registry.py  shadow.py  techniques.py  trajectory.py  types.py
mirage/static/: app.js  dashboard.css
mirage/templates/: base.html  campaigns.html  dashboard.html  demo.html  feed.html  not_found.html  session.html
tests/: test_app.py  test_backends.py  test_capabilities.py  test_dashboard.py  test_fork_orchestrator.py  test_handlers.py  test_harness.py  test_honeytokens.py  test_injections.py  test_insights.py  test_ledger.py  test_ledger_reads.py  test_orchestrator.py  test_phases.py  test_policy.py  test_provenance.py  test_registry.py  test_shadow.py  test_techniques.py  test_trajectory.py  test_types.py
tests/fixtures/: injections.py
