[project]
name = "mirage"
version = "0.1.0"
description = "Deception-based LLM security proxy: gates prompt-injection attacks at privileged actions and traps them in a honeytoken-seeded sandbox."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "jinja2>=3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
